# GRA-X-Unified-General-Resonance-Architecture

./: CITATION.cff  LICENSE  Makefile  README.md  gra-x.rar  pyproject.toml
api/: main.py
benchmarks/: run_benchmarks.py
docker/: Dockerfile  compose.yaml
docs/: api.md  architecture.md  math.md  research.md  tutorial.md
examples/: drone_swarm.py  llm_swarm.py  self_healing.py  semantic_search.py  subject_swap.py
gra_core/: __init__.py  config.py  engine.py  kernel.py  pipeline.py  state.py
gra_math/: __init__.py  chirality.py  hierarchy.py  nullification.py  operators.py  ordinal.py  proofs.py  resonance.py  theorems.py
gra_memory/: __init__.py  collective.py  long.py  semantic_memory.py  short.py
gra_metrics/: __init__.py  distance.py  entropy.py  stability.py
gra_orchestra/: __init__.py  agent_manager.py  router.py  task_graph.py  workflow.py
gra_reasoning/: __init__.py  graph_reasoning.py  multiverse.py  recursive.py  tree_of_thought.py
gra_runtime/: __init__.py  distributed.py  executor.py  scheduler.py  simulation.py
gra_semantic/: __init__.py  attention.py  embedding.py  meaning_graph.py  ontology.py  semantic_space.py
gra_subject/: __init__.py  emotions.py  identity.py  memory.py  motivation.py  subject_swap.py
gra_swarm/: __init__.py  consensus.py  critic.py  judge.py  optimization.py  planner.py  worker.py
gra_visualization/: __init__.py  dashboard.py  hierarchy.py  network.py
notebooks/: demo.ipynb
papers/: hierarchy.tex  nullification.tex  paper-en.tex  paper-ru.tex  resonance.tex
tests/: test_math.py  test_runtime.py  (+3 more)
